name:                experimental-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/experimental-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Yuka
maintainer:          85838049+yuka-xxx@users.noreply.github.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable experimental-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
